# DroneDeliverySystem

./: .gitignore  CMakeLists.txt  LISEZ-MOI.txt  README.md  makefile
include/: Client.h  Drone.h  MotherShip.h  Package.h  TrafficLanes.h  Weather.h
src/: Client.c  Drone.c  MotherShip.c  Package.c  TrafficLanes.c  Weather.c  main.c
